syntax = "proto3";

option csharp_namespace = "Makc.Dummy.MicroserviceReader.Infrastructure.Grpc.AppIncomingEvent";

package Reader;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service AppIncomingEvent {
    rpc Create (AppIncomingEventCreateActionRequest) returns (AppIncomingEventGetActionReply);
    rpc Delete (AppIncomingEventDeleteActionRequest) returns (google.protobuf.Empty);
    rpc Get (AppIncomingEventGetActionRequest) returns (AppIncomingEventGetActionReply);
    rpc GetList (AppIncomingEventGetListActionRequest) returns (AppIncomingEventGetListActionReply);
    rpc Update (AppIncomingEventUpdateActionRequest) returns (AppIncomingEventGetActionReply);
}

message ActionRequestSort {
    string field = 1;
    bool is_desc = 2;
}

message ActionRequestPage {
    int32 number = 1;
    int32 size = 2;
}

message AppIncomingEventCreateActionRequest {    
    string event_id = 1;
    string event_name = 2;
    google.protobuf.Timestamp last_loading_at = 3;
    google.protobuf.StringValue last_loading_error = 4;
    google.protobuf.Timestamp loaded_at = 5;
    int32 payload_count = 6;
    int32 payload_total_count = 7;
    google.protobuf.Timestamp processed_at = 8;
}

message AppIncomingEventDeleteActionRequest {
    string object_id = 1;
}

message AppIncomingEventGetActionRequest {
    string object_id = 1;
}

message AppIncomingEventGetActionReply {
    string event_id = 1;
    string event_name = 2;
    google.protobuf.Timestamp last_loading_at = 3;
    google.protobuf.StringValue last_loading_error = 4;
    google.protobuf.Timestamp loaded_at = 5;
    int32 payload_count = 6;
    int32 payload_total_count = 7;
    google.protobuf.Timestamp processed_at = 8;
    string object_id = 9;
    string concurrency_token = 10;
    google.protobuf.Timestamp created_at = 11;
}

message AppIncomingEventGetListActionRequestFilter {
    google.protobuf.StringValue full_text_search_query = 1;
}

message AppIncomingEventGetListActionRequest {
    ActionRequestPage page = 1;
    ActionRequestSort sort = 2;
    AppIncomingEventGetListActionRequestFilter filter = 3;
}

message AppIncomingEventGetListActionReplyItem {
    string event_id = 1;
    string event_name = 2;
    google.protobuf.Timestamp last_loading_at = 3;
    google.protobuf.StringValue last_loading_error = 4;
    google.protobuf.Timestamp loaded_at = 5;
    int32 payload_count = 6;
    int32 payload_total_count = 7;
    google.protobuf.Timestamp processed_at = 8;
    string object_id = 9;
    string concurrency_token = 10;
    google.protobuf.Timestamp created_at = 11;
}

message AppIncomingEventGetListActionReply {
    int64 total_count = 1;
    repeated AppIncomingEventGetListActionReplyItem items = 2;
}

message AppIncomingEventUpdateActionRequest {    
    string event_id = 1;
    string event_name = 2;
    google.protobuf.Timestamp last_loading_at = 3;
    google.protobuf.StringValue last_loading_error = 4;
    google.protobuf.Timestamp loaded_at = 5;
    int32 payload_count = 6;
    int32 payload_total_count = 7;
    google.protobuf.Timestamp processed_at = 8;
    string object_id = 9;
}