global using System.Globalization;
global using System.Text;
global using Ardalis.GuardClauses;
global using Ardalis.Result.AspNetCore;
global using FastEndpoints;
global using FastEndpoints.Swagger;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.App;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.App.Config;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.App.Config.Options.Sections;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.AppIncomingEvent.Endpoints.Create;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.AppIncomingEvent.Endpoints.Delete;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.AppIncomingEvent.Endpoints.Get;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.AppIncomingEvent.Endpoints.GetList;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.AppIncomingEvent.Endpoints.Update;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.AppIncomingEventPayload.Endpoints.Create;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.AppIncomingEventPayload.Endpoints.Delete;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.AppIncomingEventPayload.Endpoints.Get;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.AppIncomingEventPayload.Endpoints.GetList;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.AppIncomingEventPayload.Endpoints.Update;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.DummyItem.Endpoints.Create;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.DummyItem.Endpoints.Delete;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.DummyItem.Endpoints.Get;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.DummyItem.Endpoints.GetList;
global using Makc.Dummy.MicroserviceReader.Apps.WebApp.DummyItem.Endpoints.Update;
global using Makc.Dummy.MicroserviceReader.DomainModel.App;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.App;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEvent;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEvent.Actions.Delete;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEvent.Actions.Get;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEvent.Actions.GetList;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEvent.Actions.Save;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEvent.Commands;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEvent.DTOs;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEvent.Queries;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEventPayload;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEventPayload.Actions.Delete;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEventPayload.Actions.Get;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEventPayload.Actions.GetList;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEventPayload.Actions.Save;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEventPayload.Commands;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEventPayload.DTOs;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEventPayload.Queries;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.DummyItem;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.DummyItem.Actions.Delete;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.DummyItem.Actions.Get;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.DummyItem.Actions.GetList;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.DummyItem.Actions.Save;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.DummyItem.Commands;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.DummyItem.DTOs;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.DummyItem.Queries;
global using Makc.Dummy.MicroserviceReader.Infrastructure.Core.App;
global using Makc.Dummy.MicroserviceReader.Infrastructure.Grpc.App;
global using Makc.Dummy.MicroserviceReader.Infrastructure.MongoDB.App;
global using Makc.Dummy.Shared.Infrastructure.Web.App.Middlewares;
global using Makc.Dummy.Shared.Core.App;
global using Makc.Dummy.Shared.Core.App.Config.Options;
global using Makc.Dummy.Shared.Core.App.Config.Options.Sections.Domain;
global using Makc.Dummy.Shared.Core.App.Config.Options.Sections.Infrastructure;
global using Makc.Dummy.Shared.Core.App.Config.Options.Sections.Infrastructure.Db.MongoDB;
global using Makc.Dummy.Shared.Core.App.Event.Payloads;
global using Makc.Dummy.Shared.Infrastructure.Core.App;
global using Makc.Dummy.Shared.Infrastructure.Core.App.Logger.Funcs;
global using Makc.Dummy.Shared.Infrastructure.CoreForOpenTelemetry.App;
global using Makc.Dummy.Shared.Infrastructure.CoreForOpenTelemetryInWeb.App;
global using MediatR;
global using Microsoft.AspNetCore.Authentication.JwtBearer;
global using Microsoft.Extensions.Options;
global using Microsoft.IdentityModel.Logging;
global using Microsoft.IdentityModel.Tokens;
