global using Google.Protobuf.WellKnownTypes;
global using Grpc.Core;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEvent.Actions.Delete;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEvent.Actions.Get;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEvent.Actions.GetList;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEvent.Actions.Save;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEvent.DTOs;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEvent.Queries;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEventPayload.Actions.Delete;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEventPayload.Actions.Get;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEventPayload.Actions.GetList;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEventPayload.Actions.Save;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEventPayload.DTOs;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.AppIncomingEventPayload.Queries;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.DummyItem.Actions.Delete;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.DummyItem.Actions.Get;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.DummyItem.Actions.GetList;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.DummyItem.Actions.Save;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.DummyItem.Commands;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.DummyItem.DTOs;
global using Makc.Dummy.MicroserviceReader.DomainUseCases.DummyItem.Queries;
global using Makc.Dummy.MicroserviceReader.Infrastructure.Grpc.AppIncomingEvent;
global using Makc.Dummy.MicroserviceReader.Infrastructure.Grpc.AppIncomingEventPayload;
global using Makc.Dummy.MicroserviceReader.Infrastructure.Grpc.DummyItem;
global using Makc.Dummy.Shared.Core.App.Event.Payloads;
global using Makc.Dummy.Shared.Infrastructure.Grpc;
global using MediatR;
global using Microsoft.AspNetCore.Builder;
global using Microsoft.Extensions.DependencyInjection;
global using Microsoft.Extensions.Logging;
global using AppIncomingEventPayloadServiceBase = Makc.Dummy.MicroserviceReader.Infrastructure.Grpc.AppIncomingEventPayload.AppIncomingEventPayload.AppIncomingEventPayloadBase;
global using AppIncomingEventServiceBase = Makc.Dummy.MicroserviceReader.Infrastructure.Grpc.AppIncomingEvent.AppIncomingEvent.AppIncomingEventBase;
global using DummyItemServiceBase = Makc.Dummy.MicroserviceReader.Infrastructure.Grpc.DummyItem.DummyItem.DummyItemBase;
