global using System.Globalization;
global using System.Text;
global using Ardalis.GuardClauses;
global using Ardalis.Result.AspNetCore;
global using FastEndpoints;
global using FastEndpoints.Swagger;
global using Makc.Dummy.Reader.Apps.WebApp.App;
global using Makc.Dummy.Reader.Apps.WebApp.App.Config;
global using Makc.Dummy.Reader.Apps.WebApp.App.Config.Options.Sections;
global using Makc.Dummy.Reader.Apps.WebApp.AppIncomingEvent.Endpoints.Create;
global using Makc.Dummy.Reader.Apps.WebApp.AppIncomingEvent.Endpoints.GetList;
global using Makc.Dummy.Reader.Apps.WebApp.AppIncomingEvent.Endpoints.Update;
global using Makc.Dummy.Reader.Apps.WebApp.AppIncomingEventPayload.Endpoints.Create;
global using Makc.Dummy.Reader.Apps.WebApp.AppIncomingEventPayload.Endpoints.GetList;
global using Makc.Dummy.Reader.Apps.WebApp.AppIncomingEventPayload.Endpoints.Update;
global using Makc.Dummy.Reader.Apps.WebApp.DummyItem.Endpoints.Create;
global using Makc.Dummy.Reader.Apps.WebApp.DummyItem.Endpoints.GetList;
global using Makc.Dummy.Reader.Apps.WebApp.DummyItem.Endpoints.Update;
global using Makc.Dummy.Reader.DomainModel.App;
global using Makc.Dummy.Reader.DomainUseCases.App;
global using Makc.Dummy.Reader.DomainUseCases.AppIncomingEvent;
global using Makc.Dummy.Reader.DomainUseCases.AppIncomingEvent.Actions.Delete;
global using Makc.Dummy.Reader.DomainUseCases.AppIncomingEvent.Actions.Get;
global using Makc.Dummy.Reader.DomainUseCases.AppIncomingEvent.Actions.GetList;
global using Makc.Dummy.Reader.DomainUseCases.AppIncomingEvent.Actions.Save;
global using Makc.Dummy.Reader.DomainUseCases.AppIncomingEvent.DTOs;
global using Makc.Dummy.Reader.DomainUseCases.AppIncomingEvent.Queries;
global using Makc.Dummy.Reader.DomainUseCases.AppIncomingEventPayload;
global using Makc.Dummy.Reader.DomainUseCases.AppIncomingEventPayload.Actions.Delete;
global using Makc.Dummy.Reader.DomainUseCases.AppIncomingEventPayload.Actions.Get;
global using Makc.Dummy.Reader.DomainUseCases.AppIncomingEventPayload.Actions.GetList;
global using Makc.Dummy.Reader.DomainUseCases.AppIncomingEventPayload.Actions.Save;
global using Makc.Dummy.Reader.DomainUseCases.AppIncomingEventPayload.DTOs;
global using Makc.Dummy.Reader.DomainUseCases.AppIncomingEventPayload.Queries;
global using Makc.Dummy.Reader.DomainUseCases.DummyItem;
global using Makc.Dummy.Reader.DomainUseCases.DummyItem.Actions.Delete;
global using Makc.Dummy.Reader.DomainUseCases.DummyItem.Actions.Get;
global using Makc.Dummy.Reader.DomainUseCases.DummyItem.Actions.GetList;
global using Makc.Dummy.Reader.DomainUseCases.DummyItem.Actions.Save;
global using Makc.Dummy.Reader.DomainUseCases.DummyItem.DTOs;
global using Makc.Dummy.Reader.DomainUseCases.DummyItem.Queries;
global using Makc.Dummy.Reader.Infrastructure.Core.App;
global using Makc.Dummy.Reader.Infrastructure.Grpc.App;
global using Makc.Dummy.Reader.Infrastructure.MongoDB.App;
global using Makc.Dummy.Shared.Apps.WebApp.App.Middlewares;
global using Makc.Dummy.Shared.Core.App;
global using Makc.Dummy.Shared.Core.App.Config.Options;
global using Makc.Dummy.Shared.Core.App.Config.Options.Sections.Domain;
global using Makc.Dummy.Shared.Core.App.Config.Options.Sections.Infrastructure;
global using Makc.Dummy.Shared.Core.App.Config.Options.Sections.Infrastructure.Db.MongoDB;
global using Makc.Dummy.Shared.Core.App.Event.Payloads;
global using Makc.Dummy.Shared.Infrastructure.Core.App;
global using Makc.Dummy.Shared.Infrastructure.Core.App.Logger.Funcs;
global using Makc.Dummy.Shared.Infrastructure.CoreForOpenTelemetry.App;
global using Makc.Dummy.Shared.Infrastructure.CoreForOpenTelemetryInWeb.App;
global using MediatR;
global using Microsoft.AspNetCore.Authentication.JwtBearer;
global using Microsoft.Extensions.Options;
global using Microsoft.IdentityModel.Logging;
global using Microsoft.IdentityModel.Tokens;
